Stand-in car cut images in place.  Added year and cleaned up alignment issues a bit..

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -47,4 +47,5 @@
     overflow: hidden;
     max-width: 336px;
     font-size: 0.75em;
+    vertical-align: middle
 }
